2007-07-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-01
	* add 'setup' pull-down to database connection dialog
	* add sql scripts for int2r / odms maintanance
	* increase scroll speed in SrollableMenu
	* parser update/fix from Jonathan

2007-07-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-00
	* change db schema to allow many-to-many relations between
	configurations and edsources, essources, esmodules, services,
	paths, and sequences
	* adjust parser
	* adjust gui

2007-07-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-01
	* allow for empty (db) directories to be removed in the
	SaveConfiguration dialog (context menu)
	* ScrollableMenu: show either both arrows or no arrows

2007-07-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* add ESModuleTemplates and ESModules tables to the db schema
	* add ESModule Template/Instance to the data model
	* add ESModule relevant components to converter/
	* add ESModule relevant code to gui/

2007-07-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* fix bug in SaveConfigurationDialog (wouldn't react to OK/Cancel
	buttons)
	* change name of temporary db server from cmssrv0.cern.ch to
	cmssrv0 (as it was moved to the private .cms network)

2007-06-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* updates to panels and dialogs, robust UI designs using NetBeans.
	* The node of an inserted module reference gets immediately
	selected.
	
2007-06-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* parser: ESProducers being parsed (as Modules with type
	'ESProducer')
	* add directory 'ext' and add the jars for the JDBC drivers to
	it. Also add a jar for org.jdesktop.layout.* support, which allows
	for GUIs to be designed with the Netbeans GUI Editor
	* adjust startGUI script to rely on the jars in ext/